--- a/html_tables/1. Why do we learn statistics.html
+++ b/html_tables/1. Why do we learn statistics.html
@@ -6,18 +6,18 @@
 <table width="50%" border="1" >
 	<tr>
 		<th> </th>
-		<th>conclusion feels true</th>
-		<th>conclusion feels false</th>
+		<th>結論應該為真</th>
+		<th>結論應該為假</th>
 	</tr>
 	<tr>
-		<th>argument is valid</th>
-		<td>100\(\%\) say "valid"</td>
-		<td>100\(\%\) say "valid"</td>
+		<th>論證有效</th>
+		<td>100\(\%\) 認為“有效”</td>
+		<td>100\(\%\) 認為“有效”</td>
 	</tr>
 	<tr>
-		<th>argument is invalid</th>
-		<td>0\(\%\) say "valid"</td>
-		<td>0\(\%\) say "valid"</td>
+		<th>論證無效</th>
+		<td>0\(\%\) 認為“有效”</td>
+		<td>0\(\%\) 認為“有效”</td>
 	</tr>
 </table>
 
@@ -25,18 +25,18 @@
 <table width="50%" border="1" >
 	<tr>
 		<th> </th>
-		<th>conclusion feels true</th>
-		<th>conclusion feels false</th>
+		<th>結論應該為真</th>
+		<th>結論應該為假</th>
 	</tr>
 	<tr>
-		<th>argument is valid</th>
-		<td>92\(\%\) say "valid"</td>
+		<th>論證有效</th>
+		<td>92\(\%\) 認為“有效”</td>
 		<td> </td>
 	</tr>
 	<tr>
-		<th>argument is invalid</th>
+		<th>論證無效</th>
 		<td> </td>
-		<td>8\(\%\) say "valid"</td>
+		<td>8\(\%\) 認為“有效”</td>
 	</tr>
 </table>
 
@@ -44,18 +44,18 @@
 <table width="50%" border="1" >
 	<tr>
 		<th> </th>
-		<th>conclusion feels true</th>
-		<th>conclusion feels false</th>
+		<th>結論應該為真</th>
+		<th>結論應該為假</th>
 	</tr>
 	<tr>
-		<th>argument is valid</th>
-		<td>92\(\%\) say "valid"</td>
-		<td><b>46\(\%\) say "valid"</b></td>
+		<th>論證有效</th>
+		<td>92\(\%\) 認為“有效”</td>
+		<td><b>46\(\%\) 認為“有效”</b></td>
 	</tr>
 	<tr>
-		<th>argument is invalid</th>
-		<td><b>92\(\%\) say "valid"</b></td>
-		<td>8\(\%\) say "valid"</td>
+		<th>論證無效</th>
+		<td><b>92\(\%\) 認為“有效”</b></td>
+		<td>8\(\%\) 認為“有效”</td>
 	</tr>
 </table>
 
@@ -64,16 +64,16 @@
 <table width="50%" border="1" >
 	<tr>
 		<th> </th>
-		<th>Number of applicants</th>
-		<th>Percent admitted</th>
+		<th>申請者人數</th>
+		<th>通過比例</th>
 	</tr>
 	<tr>
-		<th>Males</th>
+		<th>男性</th>
 		<td>8442</td>
 		<td>44\(\%\)</td>
 	</tr>
 	<tr>
-		<th>Females</th>
+		<th>女性</th>
 		<td>4321</td>
 		<td>35\(\%\)</td>
 	</tr>
@@ -83,15 +83,15 @@
 <table width="50%" border="1" >
 	<tr>
 		<th> </th>
-		<th> Males</th>
-		<th> Females</th>
+		<th> 男性</th>
+		<th> 女性</th>
 	</tr>
 	<tr>
-		<th>Department</th>
-		<th>Applicants</th>
-		<th>Percent admitted</th>
-		<th>Applicants</th>
-		<th>Percent admitted</th>
+		<th>學系</th>
+		<th>申請者人數</th>
+		<th>通過比例</th>
+		<th>申請者人數</th>
+		<th>通過比例</th>
 	</tr>
 	<tr>
 		<th>A</th>
