finish draft translations on to-be taught parts by chatGPT-4

--- a/data_and_tables/11. Comparing two means.html
+++ b/data_and_tables/11. Comparing two means.html
@@ -177,7 +177,7 @@
 		<td> 5 </td>
 	</tr>
 	<tr>
-		<td> positive differences </td>
+		<td> 正差異值 </td>
 		<td> </td>
 		<td>  7 </td>
 		<td> . </td>
