--- a/html_tables/11. Comparing two means.html
+++ b/html_tables/11. Comparing two means.html
@@ -177,7 +177,7 @@
 		<td> 5 </td>
 	</tr>
 	<tr>
-		<td> positive differences </td>
+		<td> 正差異值 </td>
 		<td> </td>
 		<td>  7 </td>
 		<td> . </td>
